--- a/src/scss/Overlay.scss
+++ b/src/scss/Overlay.scss
@@ -67,7 +67,7 @@
           max-height: 100dvw;
         }
       }
-      .close-btn {
+      .close-btn.horizontal {
         top: initial;
         bottom: 1rem;
       }
